# django-modern-user

./: .env.example  .flake8  .git-blame-ignore-revs  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  publish.yml  test.yml
core/: asgi.py  settings.py  urls.py  wsgi.py
django_modern_user/: admin.py  models.py
django_user_plus/: admin.py  apps.py  models.py
django_user_plus/migrations/: 0001_initial.py  0002_rename_customuser_userplus.py
